--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -8,16 +8,16 @@ simulation:
   seed: 42
 
 environment:
-  food_spawn_rate: 0.01  # probability per cell per timestep
+  food_spawn_rate: 0.002  # probability per cell per timestep - lower for more competition
   food_energy_value: 10
 
 agent:
   initial_energy: 100
-  base_metabolic_cost: 1.0
-  movement_cost: 0.1
+  base_metabolic_cost: 1.2  # higher cost = more selection pressure
+  movement_cost: 0.15  # higher cost = favors efficient movement
   perception_range: 2  # cells in each direction (5x5 grid)
-  reproduction_threshold: 150
-  reproduction_cost: 80
+  reproduction_threshold: 140  # lower = faster reproduction cycles
+  reproduction_cost: 70  # lower = more offspring, faster evolution
 
 brain:
   input_size: 52
@@ -26,11 +26,11 @@ brain:
   activation: relu
 
 evolution:
-  mutation_rate: 0.1  # fraction of weights
-  mutation_std: 0.1
+  mutation_rate: 0.15  # higher = more genetic diversity
+  mutation_std: 0.15  # higher = larger mutations
 
 logging:
-  log_interval: 1000  # timesteps
+  log_interval: 100  # timesteps - more frequent logging for long runs
   checkpoint_interval: 10000
   analysis_interval: 50000
   visualization_fps: 30
