--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -35,3 +35,14 @@ logging:
   analysis_interval: 50000
   visualization_fps: 30
   save_dir: experiments/logs
+
+behavioral_metrics:
+  enabled: true
+  movement_history_length: 20
+  log_interval: 100
+
+lineage_tracking:
+  enabled: true
+  save_interval: 10000
+  track_genetic_distance: false
+  max_lineage_depth: 1000
