Add SocialBrain architecture with backward compatibility
- Create SocialBrain class extending Brain for social features
- New architecture: 76→48→23 (vs 52→32→6 legacy)
- Support for memory inputs/outputs and communication I/O
- Legacy mode maintains full compatibility with existing agents
- Configuration flag (social_features) to enable new architecture
- Migration method to convert existing brains
- Create social_test.yaml config for testing social features
- All existing functionality preserved and tests pass

Ready for memory integration in next step.

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -24,6 +24,7 @@ brain:
   hidden_size: 32
   output_size: 6
   activation: relu
+  social_features: false    # Enable social brain features (memory, communication, cooperation)
 
 evolution:
   mutation_rate: 0.1           # Fraction of weights mutated
