--- a/configs/social_test.yaml
+++ b/configs/social_test.yaml
@@ -24,7 +24,7 @@ brain:
   hidden_size: 32
   output_size: 6
   activation: relu
-  social_features: false    # Enable social brain features (memory, communication, cooperation)
+  social_features: true    # Enable social brain features (memory, communication, cooperation)
 
 evolution:
   mutation_rate: 0.1
