Implement communication signal extraction and energy costs
- Add communication signal normalization with tanh to bound signals [-1, 1]
- Implement energy costs for communication (0.5 * signal_strength)
- Add communication_cost parameter to agent configs
- Add communication metrics tracking (signal strength, activity rate, energy usage)
- Integrate communication costs into simulation step after decisions
- Add communication analytics to behavioral metrics computation
- Update checkpointing to handle communication tracking state
- All tests pass, signals working with proper energy penalties

Next: Implement resource transfer mechanisms for cooperation.

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -15,7 +15,7 @@ agent:
   initial_energy: 100          # Starting energy
   base_metabolic_cost: 1.0     # Energy lost per timestep (always)
   movement_cost: 0.1           # Additional cost when moving
-  perception_range: 2          # Cells visible (2 = 5x5 grid)
+  communication_cost: 0.5      # Energy cost for non-zero communication signals  perception_range: 2          # Cells visible (2 = 5x5 grid)
   reproduction_threshold: 150  # Energy needed to reproduce
   reproduction_cost: 80        # Energy given to offspring
 
